# white_python

./: .gitignore  LICENSE  hello.py  pyproject.toml
white_paper/: __init__.py  ieee.py  white.py
